--- a/ch05-blinky-button-pub-sub/Cargo.toml
+++ b/ch05-blinky-button-pub-sub/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ch05-blinky-pub-sub"
+name = "blinky-button-pub-sub"
 version = "0.1.0"
 authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
 edition = "2021"
@@ -20,8 +20,6 @@ esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
 esp-idf-hal = "0.38"
 embedded-hal = "0.2"
 statig = "0.2.0"
-critical-section = "1"
-nuts = "0.2"
 
 [build-dependencies]
 embuild = "0.30.4"
