--- a/ch05-blinky-button-multi-thread/Cargo.toml
+++ b/ch05-blinky-button-multi-thread/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blinky-button-pub-sub"
+name = "blinky-button-multi-thread"
 version = "0.1.0"
 authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
 edition = "2021"
