interrupt is working kinda

--- a/ch04-blinky-button-hsm/Cargo.toml
+++ b/ch04-blinky-button-hsm/Cargo.toml
@@ -16,9 +16,14 @@ opt-level = "z"
 pio = ["esp-idf-sys/pio"]
 
 [dependencies]
-esp-idf-sys = { version = "0.32", features = ["binstart"] }
+esp-idf-sys = { version = "0.32", features = ["binstart", "native"] }
 esp-idf-hal = "0.40"
+esp-idf-svc = "0.45.0"
+lazy_static = "1.4.0"
 embedded-hal = {version = "1.0.0-alpha.9"}
+embedded-svc = { version = "0.24" }
+log = "0.4"
+esp-println = { version = "0.3.1", features = ["esp32c3"] }
 embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
 statig = "0.2.0"
 
