code compiles, untested

--- a/ch07-blinky-mqtt/Cargo.toml
+++ b/ch07-blinky-mqtt/Cargo.toml
@@ -25,6 +25,7 @@ embedded-svc = "0.24"
 statig = "0.2.0"
 crossbeam = "0.8"
 serde = { version = "1", features = ["derive"] }
+hex = "0.4.3"
 crossbeam-channel = "0.5"
 anyhow = { version = "1", features = ["backtrace"] }
 
