--- a/ch07-blinky-mqtt/Cargo.toml
+++ b/ch07-blinky-mqtt/Cargo.toml
@@ -18,9 +18,8 @@ pio = ["esp-idf-sys/pio"]
 [dependencies]
 esp-idf-sys = { version = "0.32", features = ["binstart"] }
 esp-idf-hal = "0.40"
+esp-println = { version = "0.3.1", features = ["esp32"] }
 esp-idf-svc = "0.45"
-embedded-hal = {version = "1.0.0-alpha.9"}
-embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
 embedded-svc = "0.24"
 statig = "0.2.0"
 crossbeam = "0.8"
