--- a/ch05-LED-pwm/Cargo.toml
+++ b/ch05-LED-pwm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blinky-multi-thread"
+name = "led_pwm"
 version = "0.1.0"
 authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
 edition = "2021"
