--- a/ch06-wifi-mqtt/Cargo.toml
+++ b/ch06-wifi-mqtt/Cargo.toml
@@ -27,6 +27,7 @@ embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["u
 crossbeam = "0.8"
 crossbeam-channel = "0.5"
 crossbeam-utils = "0.8"
+anyhow = "1"
 
 [build-dependencies]
 embuild = "0.31"
