--- a/tutorials/1-input/Cargo.toml
+++ b/tutorials/1-input/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blinky-button"
+name = "input"
 version = "0.1.0"
 authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
 edition = "2021"
