--- a/tutorials/2-threads/Cargo.toml
+++ b/tutorials/2-threads/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blinky-multi-thread"
+name = "threads"
 version = "0.1.0"
 authors = ["Shane Mattner <shanemmattner@gmail.com.com>"]
 edition = "2021"
