--- a/tutorials/p7-uart/Cargo.toml
+++ b/tutorials/p7-uart/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "spi"
+name = "p7-uart"
 version = "0.1.0"
 authors = ["Shane <shanemmattner@gmail.com>"]
 edition = "2021"
@@ -18,8 +18,7 @@ pio = ["esp-idf-sys/pio"]
 [dependencies]
 esp-idf-sys = { version = "0.32", features = ["binstart"] }
 esp-idf-hal = "0.40"
-esp-println = { version = "0.3.1", features = ["esp32c3"] }
-embedded-sdmmc = "0.4.0"
+anyhow = "1"
 
 [build-dependencies]
 embuild = "0.30.4"
