--- a/WIP/ch04-blinky-button-hsm/Cargo.toml
+++ b/WIP/ch04-blinky-button-hsm/Cargo.toml
@@ -20,6 +20,8 @@ esp-idf-sys = { version = "0.32", features = ["binstart"] }
 esp-idf-hal = "0.40"
 esp-println = { version = "0.3.1", features = ["esp32c3"] }
 statig = "0.2.0"
+critical-section = { version = "1.1.1", features = ["std"] }
+esp-println = { version = "0.3", features = ["esp32c3"] }
 
 [build-dependencies]
 embuild = "0.30.4"
