--- a/P0-Peripheral-Tutorials/p4-dht11/Cargo.toml
+++ b/P0-Peripheral-Tutorials/p4-dht11/Cargo.toml
@@ -22,6 +22,8 @@ esp-idf-hal = "0.40.1"
 esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+dht11-esp32 = "0.1.0"
+
 
 [build-dependencies]
 embuild = "0.30.4"
