working DHT11 tutorial

--- a/P0-Peripheral-Tutorials/p4-dht11/Cargo.toml
+++ b/P0-Peripheral-Tutorials/p4-dht11/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "p4-dht11"
+name = "dht11"
 version = "0.1.0"
 authors = ["Shane <shanemmattner@gmail.com>"]
 edition = "2021"
@@ -16,14 +16,9 @@ opt-level = "z"
 pio = ["esp-idf-sys/pio"]
 
 [dependencies]
-anyhow = "1.0.68"
-embedded-hal = "0.2.7"
-esp-idf-hal = "0.40.1"
-esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
-tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
-dht11-esp32 = "0.1.0"
-
+esp-idf-hal = "0.40"
+esp-idf-sys = { version = "0.32", features = ["binstart"] }
+dht11 = "0.3.1"
 
 [build-dependencies]
 embuild = "0.30.4"
