printing values through uart between threads

--- a/Tutorials/p9-adc-stream/Cargo.toml
+++ b/Tutorials/p9-adc-stream/Cargo.toml
@@ -21,6 +21,7 @@ esp-idf-hal = "0.40"
 anyhow = "1"
 lazy_static = "1.4.0"
 shell-words = "1.0.0"
+crossbeam-utils = "0.8"
 
 [build-dependencies]
 embuild = "0.30.4"
